<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © Yan Zhenjie

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">Years</string>

    <string name="app_activity_sample">In Activity</string>
    <string name="app_dialog_sample">In Dialog(Recommend)</string>

    <string name="app_year_select">Select Year</string>
    <string name="app_month_select">Select Month</string>

    <string name="app_year">Show Year</string>
    <string name="app_month">Show Month</string>

    <string name="app_obtain">Active Obtain</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>
