<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © Yan Zhenjie

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_15"
    android:paddingEnd="@dimen/dp_20"
    android:paddingStart="@dimen/dp_20"
    android:paddingTop="@dimen/dp_20">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/iv_back"
            style="@style/ImageButton.WrapContent"
            android:src="@drawable/ic_back_black"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/app_year_select"
            android:textSize="@dimen/sp_18"/>
    </LinearLayout>

    <com.yanzhenjie.years.YearsView
        android:id="@+id/years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="end">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/ButtonText.Secondary.WrapContent"
            android:text="@string/cancel"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            style="@style/ButtonText.Primary.WrapContent"
            android:text="@string/confirm"/>

    </LinearLayout>

</LinearLayout>