<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright © Yan Zhenjie

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/years_dp_10"
            android:text="@string/app_year_select"
            android:textSize="@dimen/years_sp_18"/>

        <com.yanzhenjie.years.YearsView
            android:id="@+id/years_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/years_dp_10">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_year"
                style="@style/Button.Primary.WrapContent.WidthMatchParent"
                android:layout_weight="1"
                android:text="@string/app_year"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_month"
                style="@style/Button.Primary.WrapContent.WidthMatchParent"
                android:layout_weight="1"
                android:text="@string/app_month"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/colorFont"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:textSize="@dimen/sp_18"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_obtain"
            style="@style/Button.Primary.WrapContent.WidthMatchParent"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/app_obtain"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>